hw2/hw2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: hw2-arch-health-srvice
  name: hw2-arch-health-srvice
spec:
  ports:
    - port: 8083
      targetPort: 8083
  type: NodePort
  selector:
    app: hw2-arch-health
